# cuba

./: CMakeLists.txt  README.md
include/: cuba.h
src/common/: Data.c  config.h  stddecl.h  unistd.h
src/vegas/: CSample.c  Grid.c  Integrate.c  Vegas.c  decl.h
